--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ p {
 }
 button {
     writing-mode: vertical-rl;
+    -webkit-text-orientation: upright;
     text-orientation: upright;
     font-family: Georgia;
     font-size: 30px;
