--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
-body {
-    width: max-width;
+html, body {
+    width:  100%;
+    height: 100%;
+    margin: 0;
+    background-color: #6f3d4f;
 }
+
 h1 {
     font-family: Georgia;
     margin: 20px;
@@ -8,45 +12,52 @@ h1 {
 p {
     font-family: Georgia;
 }
-button {
-    writing-mode: vertical-rl;
-    -webkit-text-orientation: upright;
-    text-orientation: upright;
+
+.button {
+    float: center;
     font-family: Georgia;
-    font-size: 30px;
-    letter-spacing: -6px;
-    padding: 0px;
+    font-size: 20px;
+    border-style: solid;
+    padding: 10px;
+    background-color: #774052;
+    box-shadow: 1px 1px 1px black;
 }
+
 
 #canvas_div {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-}
+    margin: 20px 20px 20px 20px;
+    text-align: center;
+} 
 
-#start_button {
-    width: auto;
-    float: center;
-}
-#reset_button {
-    width: auto;
-    float: center;
+.button_div {
+    margin: auto;
+    display: inline-block;
+    margin: -30px 0px 0px 20px;
+    text-align: center;
+    
 }
 
 canvas {
 /*    width: 667px;
-    height: 600px; */
-    border-style: solid;
+    height: 600px;
     justify-content: auto;
-    float: center;
+    float: center;*/
+    border-style: solid;
+    box-shadow: 2px 2px 2px black;
+
 }
 
-#hidden_images {
+.hidden_images {
     display: none; 
 }
 
+img {
+    height: 900px;
+    width: 1200px;
+}
+
 #main_text {
-    background-color: #F0F0F0;
+    background-color: #774052;
     border-style: solid;
     margin: 0px 20px 0px 20px;
     padding: 20px;
@@ -68,12 +79,12 @@ canvas {
 
 /* formatting links: */
 a:link {
-  color: #d00000;
+  color: #501010;
 }
 a:visited {
-  color: #a00050;
+  color: #800050;
 }
 a:hover {
-    color: red;
-    background-color: #e0e0e0;
+    color: #801040;
+    background-color: black;
 }
